[project]
name = "Binbot"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "sqlmodel>=0.0.37",
    "psycopg2-binary>=2.9.12",
    "python-jose",
    "passlib",
    "requests-html>=0.10.0",
    "py3cw>=0.0.39",
    "apscheduler>=3.6.3",
    "requests-cache>=1.3.1",
    "py4j>=0.10.9",
    "sqlalchemy>=2.0.30",
    "alembic>=1.18.4",
    "alembic-postgresql-enum",
    "pybinbot>=1.9.49",
]

[project.urls]
Documentation = "https://carkod.github.io/binbot/"
Repository = "https://github.com/carkod/binbot"


[tool.uv]
package = false

[tool.uv.sources]
# Remove once vcrpy releases aiohttp 3.14 support from vcrpy#996.
vcrpy = { git = "https://github.com/kevin1024/vcrpy.git", rev = "1b8c169fb3e69491290ba7b066ad7907112911e9" }


[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest>=9.0.2",
    "coverage",
    "pytest-vcr>=1.0.2",
    "vcrpy>=8.1.1",
    "alembic-postgresql-enum",
    "types-requests>=2.33.0.20260518",
    "types-python-dateutil",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "mypy>=2.1.0",
]
