[project]
name = "Binbot"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlmodel>=0.0.16",
    "python-jose",
    "passlib",
    "websocket-client>=1.5.0",
    "websockets>=12.0",
    "requests-html>=0.10.0",
    "py3cw>=0.0.39",
    "apscheduler>=3.6.3",
    "requests-cache>=1.2.0",
    "kafka-python>=2.0.2",
    "py4j>=0.10.9",
    "sqlalchemy>=2.0.30",
    "alembic",
    "psycopg2",
    "alembic-postgresql-enum",
    "psycopg",
    "pydantic-settings>=2.10.1",
    "confluent-kafka>=2.11.1",
    "aiokafka>=0.12.0",
    "pybinbot>=0.6.3",
]

[project.urls]
Documentation = "https://carkod.github.io/binbot/"
Repository = "https://github.com/carkod/binbot"


[tool.uv]
package = false


[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest>=9.0.2",
    "mongomock>=4.1.2",
    "coverage",
    "pytest-vcr>=1.0.2",
    "ruff>=0.11.12",
    "mypy>=1.19.1",
    "types-requests>=2.32.4.20260107",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
